--- a/www/cgicc/Makefile
+++ b/www/cgicc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/05/22 20:08:44 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2005/08/20 11:06:07 grant Exp $
 
 DISTNAME=	cgicc-3.1.5
 PKGREVISION=	1
@@ -10,11 +10,18 @@ HOMEPAGE=	http://www.gnu.org/software/cgicc/cgicc.html
 COMMENT=	C++ compliant CGI applications libraries
 
 USE_TOOLS+=	gmake
+USE_LANGUAGES=	c++
 USE_LIBTOOL=	YES
 GNU_CONFIGURE=	YES
 
 INFO_FILES=	cgicc.info
 
 LTCONFIG_OVERRIDE=	${WRKSRC}/support/ltconfig ${WRKSRC}/example/ltconfig
+
+.include "../../mk/compiler.mk"
+
+.if empty(CC_VERSION:Mgcc)
+BUILDLINK_TRANSFORM+=	rm:-lstdc++
+.endif
 
 .include "../../mk/bsd.pkg.mk"
