--- a/audio/musicbrainz/Makefile
+++ b/audio/musicbrainz/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2005/08/10 20:56:12 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2005/08/20 11:17:52 grant Exp $
 
 DISTNAME=	libmusicbrainz-2.1.1
 PKGNAME=	${DISTNAME:S/lib//}
@@ -19,6 +19,12 @@ USE_LIBTOOL=		YES
 PKGCONFIG_OVERRIDE=	libmusicbrainz.pc.in
 
 CONFIGURE_ARGS+=	--enable-cpp-headers
+
+.include "../../mk/compiler.mk"
+
+.if empty(CC_VERSION:Mgcc*)
+BUILDLINK_TRANSFORM+=	rm:-lstdc++
+.endif
 
 .include "../../textproc/expat/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
