--- a/fonts/ghostscript-cidfonts/Makefile
+++ b/fonts/ghostscript-cidfonts/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2004/04/24 22:46:10 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2005/08/20 19:16:21 jlam Exp $
 
 DISTNAME=	ghostscript-cidfonts-20000901
+PKGREVISION=	1
 CATEGORIES=	fonts
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -27,7 +28,7 @@ FILES_SUBST+=		ADOBE_RESOURCEDIR=${ADOBE_RESOURCEDIR}
 FILES_SUBST+=		GS_RESOURCEDIR=${GS_RESOURCEDIR}
 FILES_SUBST+=		PKG_INFO=${PKG_TOOLS_BIN}/pkg_info
 
-MAKE_DIRS=		${GS_RESOURCEDIR} ${GS_RESOURCEDIR}/CIDFont
+REQD_DIRS=		${GS_RESOURCEDIR} ${GS_RESOURCEDIR}/CIDFont
 
 do-install:	# nothing
 
