--- a/lang/sun-jre14/Makefile
+++ b/lang/sun-jre14/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.27 2005/08/19 18:12:37 jlam Exp $
+# $NetBSD: Makefile,v 1.28 2005/08/20 19:16:23 jlam Exp $
 
 # Note: Regen distinfo with PKG_DEFAULT_OPTIONS+=sun-jre-jce
 
 DISTNAME=	j2re-1_4_2_08-linux-i586
 PKGNAME=	sun-jre14-2.8
-PKGREVISION=	# none
+PKGREVISION=	1
 MASTER_SITES=	# empty
 
 COMMENT=	Sun's Java(tm) 2 Runtime Environment 1.4.2
