--- a/misc/XFree86-dirs/Makefile
+++ b/misc/XFree86-dirs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2005/04/28 22:57:55 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	XFree86-dirs-1.1
+PKGREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -23,7 +24,7 @@ XFREE86_ONLY_DIRS=	# defined
 .include "../../mk/bsd.prefs.mk"
 .include "dirs.mk"
 
-MAKE_DIRS+=	${XFREE86_DIRS:O:S/^/${X11ROOT}\//:C/\/\/\/*/\//g}
+REQD_DIRS+=	${XFREE86_DIRS:O:S/^/${X11ROOT}\//:C/\/\/\/*/\//g}
 
 do-install:	# nothing
 
