--- a/misc/gnome1-dirs/Makefile
+++ b/misc/gnome1-dirs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2005/04/28 23:04:08 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	gnome1-dirs-1.5
+PKGREVISION=	1
 CATEGORIES=	misc gnome
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -25,7 +26,7 @@ NO_BUILD=	# defined
 .include "../../mk/bsd.prefs.mk"
 
 ALL_GNOME_DIRS=	${GNOME_DIRS} ${GNOME1_DIRS}
-MAKE_DIRS+=	${ALL_GNOME_DIRS:O:S/^/${PREFIX}\//}
+REQD_DIRS+=	${ALL_GNOME_DIRS:O:S/^/${PREFIX}\//}
 
 do-install:	# nothing
 
