--- a/misc/theme-dirs/Makefile
+++ b/misc/theme-dirs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2005/05/10 20:21:57 jmmv Exp $
+# $NetBSD: Makefile,v 1.5 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	theme-dirs-1.1
+PKGREVISION=	1
 CATEGORIES=	misc gnome kde
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -22,7 +23,7 @@ WRKSRC=		${WRKDIR}
 .include "dirs.mk"
 .include "../../mk/bsd.prefs.mk"
 
-MAKE_DIRS+=	${THEME_DIRS:O:S/^/${PREFIX}\//}
+REQD_DIRS+=	${THEME_DIRS:O:S/^/${PREFIX}\//}
 
 do-install:	# nothing
 
