--- a/misc/xdg-dirs/Makefile
+++ b/misc/xdg-dirs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/04/28 23:04:08 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	xdg-dirs-1.2
+PKGREVISION=	1
 CATEGORIES=	misc gnome kde
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -23,7 +24,7 @@ WRKSRC=		${WRKDIR}
 .include "dirs.mk"
 .include "../../mk/bsd.prefs.mk"
 
-MAKE_DIRS+=	${XDG_DIRS:O:S/^/${PREFIX}\//}
+REQD_DIRS+=	${XDG_DIRS:O:S/^/${PREFIX}\//}
 
 do-install:	# nothing
 
