--- a/misc/xdg-x11-dirs/Makefile
+++ b/misc/xdg-x11-dirs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2005/06/01 18:03:05 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	xdg-x11-dirs-1.2
+PKGREVISION=	1
 CATEGORIES=	misc gnome kde
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -27,7 +28,7 @@ WRKSRC=		${WRKDIR}
 .if ${X11PREFIX} == ${LOCALBASE}
 DEPENDS+=	xdg-dirs>=1.1:../../misc/xdg-dirs
 .else
-MAKE_DIRS+=	${XDG_X11_DIRS:O:S/^/${PREFIX}\//}
+REQD_DIRS+=	${XDG_X11_DIRS:O:S/^/${PREFIX}\//}
 .endif
 
 do-install:	# nothing
