--- a/www/apache/Makefile
+++ b/www/apache/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.168 2005/08/19 18:12:39 jlam Exp $
+# $NetBSD: Makefile,v 1.169 2005/08/20 19:16:22 jlam Exp $
 #
 # This pkg does not compile in mod_ssl, only the `mod_ssl EAPI' (a set of
 # code hooks that allow mod_ssl to be compiled separately later, if desired).
 
 DISTNAME=		apache_1.3.33
 PKGNAME=		${DISTNAME:S/_/-/}
-PKGREVISION=		5
+PKGREVISION=		6
 CATEGORIES=		www
 MASTER_SITES=		${MASTER_SITE_APACHE:=httpd/} \
 			${MASTER_SITE_APACHE:=httpd/old/}
@@ -141,8 +141,8 @@ CONF_FILES+=	${EGDIR}/magic.default ${PKG_SYSCONFDIR}/magic
 CONF_FILES+=	${EGDIR}/mime.types.default ${PKG_SYSCONFDIR}/mime.types
 RCD_SCRIPTS=	apache
 
-MAKE_DIRS=		${PREFIX}/share/httpd
-MAKE_DIRS+=		${PREFIX}/share/httpd/htdocs
+REQD_DIRS=		${PREFIX}/share/httpd
+REQD_DIRS+=		${PREFIX}/share/httpd/htdocs
 OWN_DIRS+=		${PREFIX}/lib/httpd
 OWN_DIRS+=		${VARBASE}/httpd
 OWN_DIRS+=		${VARBASE}/log/httpd
