--- a/x11/gtk2/Makefile
+++ b/x11/gtk2/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.89 2005/08/10 20:56:29 jlam Exp $
+# $NetBSD: Makefile,v 1.90 2005/08/20 19:16:22 jlam Exp $
 #
 
 DISTNAME=		gtk+-2.6.9
 PKGNAME=		${DISTNAME:S/gtk/gtk2/}
+PKGREVISION=		1
 CATEGORIES=		x11
 MASTER_SITES=		ftp://ftp.gtk.org/pub/gtk/v2.6/ \
 			ftp://ftp.cs.umn.edu/pub/gimp/gtk/v2.6/ \
@@ -43,7 +44,7 @@ PKGCONFIG_OVERRIDE+=	gtk+-2.0.pc.in
 PKGCONFIG_OVERRIDE+=	gdk-pixbuf-2.0.pc.in
 PKGCONFIG_OVERRIDE+=	contrib/gdk-pixbuf-xlib/gdk-pixbuf-xlib-2.0.pc.in
 
-MAKE_DIRS+=		${PREFIX}/libdata/gtk-2.0
+REQD_DIRS+=		${PREFIX}/libdata/gtk-2.0
 
 BUILD_DIRS=		${WRKSRC} ${WRKSRC}/demos/gtk-demo
 
