--- a/x11/asnap/Makefile
+++ b/x11/asnap/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2004/01/20 12:28:26 agc Exp $
+# $NetBSD: Makefile,v 1.5 2005/08/20 19:18:27 kristerw Exp $
 
 DISTNAME=		asnap
 PKGNAME=		${DISTNAME}-1.0
+PKGREVISION=		1
 CATEGORIES=		x11
 MASTER_SITES=		${MASTER_SITE_XCONTRIB:S/contrib/R5contrib/}
 
