--- a/net/wol/Makefile
+++ b/net/wol/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2005/07/16 01:19:17 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2005/08/20 19:23:17 kristerw Exp $
 
 DISTNAME=	wol-0.7.1
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ahh/}
 
