--- a/devel/libbegemot/Makefile
+++ b/devel/libbegemot/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2005/04/11 21:45:26 tv Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/20 19:36:58 kristerw Exp $
 #
 
 DISTNAME=	libbegemot-1.9
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.fokus.gmd.de/pub/cats/usr/harti/p11/
 
