--- a/www/mozilla/Makefile
+++ b/www/mozilla/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.148 2005/08/16 00:33:44 taya Exp $
+# $NetBSD: Makefile,v 1.149 2005/08/21 00:39:16 taya Exp $
 
 MOZILLA=	mozilla
 MOZILLA_BIN=	mozilla-bin
@@ -8,6 +8,8 @@ EXTRACT_SUFX=	.tar.bz2
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX}
 #DISTFILES+=    mozilla-source-1.7.3-libart_lgpl.tar.bz2
 #SITES_mozilla-source-1.7.3-libart_lgpl.tar.bz2=${MASTER_SITE_LOCAL}
+
+DIST_SUBDIR=	mozilla-1.7.11
 
 COMMENT=	Full featured gecko-based browser
 
