--- a/audio/xmms-flac/Makefile
+++ b/audio/xmms-flac/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/07/29 06:06:57 grant Exp $
+# $NetBSD: Makefile,v 1.17 2005/08/21 08:48:51 grant Exp $
 #
 
 DISTNAME=	flac-1.1.2
@@ -22,18 +22,18 @@ XMMS_WRKSRC=	${WRKSRC}/src/plugin_xmms
 # previous name of the package
 CONFLICTS=	flac-xmms-[0-9]*
 
+BUILD_DIRS=	${WRKSRC}/src/libFLAC
+BUILD_DIRS+=	${WRKSRC}/src/plugin_common
+BUILD_DIRS+=	${WRKSRC}/src/share
+BUILD_DIRS+=	${WRKSRC}/src/plugin_xmms
+INSTALL_DIRS=	${WRKSRC}/src/plugin_xmms
+
 .include "../../mk/compiler.mk"
 
 # SunPro does not support __inline
 .if !empty(PKGSRC_COMPILER:Msunpro)
 CFLAGS+=	-D__inline=inline
 .endif
-
-#do-build:
-#	@cd ${XMMS_WRKSRC}/../plugin_common && ${SETENV} ${MAKE_ENV} \
-#		${MAKE_PROGRAM} ${MAKE_FLAGS} -f ${MAKEFILE} ${BUILD_TARGET}
-#	@cd ${XMMS_WRKSRC} && ${SETENV} ${MAKE_ENV} \
-#		${MAKE_PROGRAM} ${MAKE_FLAGS} -f ${MAKEFILE} ${BUILD_TARGET}
 
 do-install:
 	@cd ${XMMS_WRKSRC} && ${SETENV} ${MAKE_ENV} \
