--- a/multimedia/gst-plugins/Makefile
+++ b/multimedia/gst-plugins/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.26 2005/08/02 14:47:01 rillig Exp $
+# $NetBSD: Makefile,v 1.27 2005/08/21 11:27:54 jmmv Exp $
 #
 
 .include "Makefile.common"
 
-PKGREVISION=		1
 COMMENT+=		base plugins
 
 USE_TOOLS+=		perl:run
