--- a/multimedia/gst-plugins/Makefile.common
+++ b/multimedia/gst-plugins/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.21 2005/08/10 20:56:20 jlam Exp $
+# $NetBSD: Makefile.common,v 1.22 2005/08/21 11:27:54 jmmv Exp $
 #
 
-DISTNAME=		gst-plugins-0.8.9
+DISTNAME=		gst-plugins-0.8.10
 CATEGORIES=		multimedia gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gst-plugins/0.8/} \
 			http://gstreamer.freedesktop.org/src/gst-plugins/
